Fix: html, body 태그에  overflow, overscroll-behavior-y 속성 추가

--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,7 @@ body {
     overflow-y: hidden;
     touch-action: none;
     overscroll-behavior-y: contain;
+    overflow: hidden;
 }
 
 html {
